# teeproxyd

./: .gitignore  Android.bp  Cargo.toml  INTEGRATION.md  README.md  build.sh  deploy.sh  teeproxyd.conf.example  teeproxyd.rc
prebuilts/: CHECKSUMS.sha256  MANIFEST.md  exhibition-reset.sh  teeproxyd
prebuilts/init/: teeproxyd.no-sepolicy.rc  teeproxyd.with-sepolicy.rc
prebuilts/sepolicy/: file_contexts.fragment  file_contexts_test_data.fragment  teeproxyd.te
prebuilts/vm/: custom_pvmfw  pvm-manage
src/: ca.rs  config.rs  health.rs  ipc.rs  log_collector.rs  main.rs  process.rs  startup.rs  vm.rs
