[package]
name = "teeproxyd"
version = "0.1.0"
edition = "2021"
description = "Android system daemon for TEE VM and CA lifecycle management"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["signal", "process", "socket", "poll", "fs"] }
libc = "0.2"

[profile.release]
strip = true
lto = true
